--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 */
+.lineas{
+	position: absolute;
+    height: 50px;
+    left: 14px;
+    top: 18px;
+}
 
 .content_grid{
 	overflow: hidden;
@@ -18,7 +24,7 @@ div.act_graf {
     margin-right: 20px;
     /*width: 20%;*/
     position: relative;
-    display: none;
+    /*display: none;*/
     float: left;
     background-color: red;
     padding: 0;
