--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 .lineas{
 	position: absolute;
     height: 50px;
-    left: 14px;
-    top: 18px;
+    /*left: 14px;
+    top: 18px;*/
 }
 
 .content_grid{
