--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 
 h2 {
   padding: 0;
-  margin: 0 0 10px 0;
+  margin: 0 0 10px 10px;
 }
 
 #forkme_banner {
@@ -344,7 +344,12 @@ h2 {
 /*--start-footer--*/
 .footer{
   background:#16A401;
-  padding:1em 0px;
+  padding: 0 0 60px 0;
+  position: fixed !important;
+  width: 100% !important;
+  bottom: 0 !important;
+  height: 2% !important;
+  /* margin-top: 18px; */
 }
 .footer-left ul{
   padding:0px;
@@ -408,18 +413,27 @@ h2 {
 .boton_menu {
   position: relative;
   background-color: #2FFF54;
-  width: 80%;
-  height: 50px;
+  width: 49%;
+  height: 30px;
   margin: 15px auto 0 auto;
   vertical-align: text-bottom;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 20px;
   cursor: pointer;
   font-size: 1.5em;
   color: black;
   border-radius: 10px;
+  display: inline-block;
+  box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+
 }
 
+.boton_menu:last-child{
+  margin: 60px auto 0 auto;
+  display: block;
+}
 .boton_menu_int{
   cursor: pointer;
 }
@@ -432,6 +446,17 @@ div#menu_pert_int {
     width: 100px;
     float: left;
     padding-top: 0;
+
+
+  position: relative;
+  height: 60px;
+  border-radius: 10px;
+  width: 49%;
+  float: left;
+  padding-top: 0;
+  box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
 }
 
 div#menu_basico_int {
@@ -442,6 +467,17 @@ div#menu_basico_int {
     width: 100px;
     float: right;
     padding-top: 0;
+
+
+  position: relative;
+  height: 60px;
+  border-radius: 10px;
+  width: 49%;
+  float: left;
+  padding-top: 0;
+  box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
 }
 
 div#menu_abrir_int {
@@ -452,11 +488,23 @@ div#menu_abrir_int {
     width: 100px;
     float: left;
     padding-top: 0;
+
+
+  
+  position: relative;
+  height: 60px;
+  border-radius: 10px;
+  width: 49%;
+  float: left;
+  padding-top: 0;
+  box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
 }
 
 
 .boton_menu_int span {
-    margin-top: 11%;
+    margin-top: -3%;
     position: absolute;
     margin-left: 30%;
     font-size: 4em;
@@ -484,8 +532,8 @@ div#menu_abrir_int {
 span.titulo_menu {
     left: 4px;
     position: relative;
-    top: 40px;
-    font-size: 19px;
+    top: 20px;
+    font-size: 22px;
 }
 
 div#regresar {
@@ -508,15 +556,17 @@ a:visited {
 }
 
 .botones div {
-    display: inline-block;
-    border: solid 1px black;
-    padding: 5px 13px;
-    margin: 20px 0px;
-    border-radius: 6px;
-    box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
-    -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
-    -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  display: inline-block;
+  border: solid 1px black;
+  padding: 5px 13px;
+  margin: 20px 0px;
+  border-radius: 6px;
+  box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
   cursor: pointer;
+  width: 90px;
+  text-align: center;
 }
 
 .botones div:last-child {
@@ -579,11 +629,11 @@ input.boton_agrega {
   overflow-y: auto;
 }
 
-.menu:nth-child(2) > span:nth-last-of-type(1){
+/*.menu:nth-child(2) > span:nth-last-of-type(1){
     position: relative;
     left: 0%;
     float: right;
-}
+}*/
 
 .footer{
   font-size: 1.3em !important;
