--- a/css/style.css
+++ b/css/style.css
@@ -439,12 +439,12 @@ h2 {
 .boton_menu {
   position: relative;
   background-color: #2FFF54;
-  width: 49%;
-  height: 30px;
+  width: 20%;
+  height: 70px;
   margin: 15px auto 0 auto;
-  vertical-align: text-bottom;
+  vertical-align: middle;
   text-align: center;
-  padding-top: 20px;
+  padding: 5px;
   cursor: pointer;
   font-size: 1.5em;
   color: black;
@@ -453,12 +453,14 @@ h2 {
   box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
   -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  bottom: -70%;
 
 }
 
 .boton_menu:last-child{
-  margin: 60px auto 0 auto;
-  display: block;
+  /*margin: 60px auto 0 auto;*/
+  /*display: block;*/
+  width: 30%;
 }
 .boton_menu_int{
   cursor: pointer;
