--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -129,6 +129,11 @@ input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
+    box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(119, 119, 119, 0.75);
+  line-height: 1.2;
+  background-color: #B6D7A8;
 }
 button[disabled],
 html input[disabled] {
@@ -275,7 +280,7 @@ html {
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
-  line-height: 1.42857143;
+  line-height: 0.9;
   color: #333;
   background-color: #fff;
 }
@@ -1649,7 +1654,7 @@ legend {
 label {
   display: inline-block;
   margin-bottom: 5px;
-  font-weight: bold;
+  /*font-weight: bold;*/
 }
 input[type="search"] {
   -webkit-box-sizing: border-box;
